--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Fast by default ⚡️</h2>
-        <p>From huge websites to small blogs, Coraza can handle that load with minimal performance insights, just check our <a href="/docs/reference/benchmarks">Benchmarks</a>.</p>
+        <p>From huge websites to small blogs, Coraza can handle that load with minimal performance impacts, just check our <a href="/docs/reference/benchmarks">Benchmarks</a>.</p>
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Extensible</h2>
