--- a/layouts/partials/head/seo.html
+++ b/layouts/partials/head/seo.html
@@ -42,3 +42,13 @@
 {{ end -}}
 
 {{ partial "head/structured-data.html" . }}
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1J0TK2GV0R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-1J0TK2GV0R');
+</script>
