--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Roadmap</h2>
-        <p>Build pages with a landing page, blog, or documentation layout. Add custom sections and components to suit your needs.</p>
+        <p>Expect interesting features and improvements within our community-driven roadmap, for small developers and big companies.</p>
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Enterprise ready</h2>
