--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
       <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ "docs/tutorials/quick-start" | relURL }}" role="button">Get started</a>
-      <p class="meta">Open-source Apache 2 Licensed. <a href="https://github.com/jptosso/coraza-waf">GitHub {{ $data := getJSON "https://api.github.com/repos/jptosso/coraza-waf/tags" }}{{ $tag := index ($data) 0 }}{{ $tag.name }}</a></p>
+      <p class="meta">Open-source Apache 2 Licensed. <a href="https://github.com/corazawaf/coraza">GitHub {{ $data := getJSON "https://api.github.com/repos/corazawaf/coraza/tags" }}{{ $tag := index ($data) 0 }}{{ $tag.name }}</a></p>
     </div>
   </div>
 </section>
