--- a/layouts/partials/head/seo.html
+++ b/layouts/partials/head/seo.html
@@ -19,7 +19,11 @@
 {{ with .Description -}}
   <meta name="description" content="{{ . }}">
 {{ else -}}
-  <meta name="description" content="{{ .Site.Params.description }}">
+  {{ with .Summary | plainify -}}
+    <meta name="description" content="{{ . }}">
+  {{ else -}}
+    <meta name="description" content="{{ .Site.Params.description }}">
+  {{ end -}}
 {{ end -}}
 
 {{ if $.Scratch.Get "paginator" }}
@@ -42,13 +46,3 @@
 {{ end -}}
 
 {{ partial "head/structured-data.html" . }}
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1J0TK2GV0R"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('js', new Date());
-
-  gtag('config', 'G-1J0TK2GV0R');
-</script>
