--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -4,9 +4,15 @@
 .error404 .content,
 .docs.list .content,
 .tutorial.list .content,
-.showcase.list .content {
+.showcase.list .content,
+.categories.list .content,
+.tags.list .content {
   padding-top: 1rem;
   padding-bottom: 3rem;
+}
+
+.content img {
+  max-width: 100%;
 }
 
 h1,
@@ -24,10 +30,27 @@ h6,
   margin: 2rem 0 1rem;
 }
 
+.offcanvas-header {
+  border-bottom: 1px solid $gray-300;
+  padding-top: 1.0625rem;
+  padding-bottom: 0.8125rem;
+}
+
+h5.offcanvas-title {
+  margin: 0;
+}
+
+body.docs {
+  padding-top: 0 !important;
+}
+
 @include media-breakpoint-up(md) {
   body {
     font-size: $font-size-md;
+
+    /*
     padding-top: 4rem !important;
+    */
   }
 
   h1,
@@ -85,9 +108,11 @@ a.btn:focus {
 }
 */
 
+/*
 body {
   padding-top: 3.5625rem;
 }
+*/
 
 .docs-sidebar {
   order: 2;
@@ -106,6 +131,10 @@ body {
       top: 4rem;
       z-index: 1000;
       height: calc(100vh - 4rem);
+    }
+
+    .docs-sidebar-top {
+      top: 0;
     }
   }
 }
@@ -150,6 +179,10 @@ body {
     height: calc(100vh - 4rem);
     overflow-y: auto;
   }
+
+  .docs-toc-top {
+    top: 0;
+  }
 }
 
 .docs-content {
@@ -183,9 +216,15 @@ body {
   text-decoration: none;
 }
 
-#TableOfContents ul {
+#TableOfContents ul,
+#toc ul {
   padding-left: 0;
   list-style: none;
+}
+
+#toc a.active {
+  color: $primary;
+  font-weight: 500;
 }
 
 ::selection {
@@ -226,4 +265,24 @@ body {
 
 .katex {
   font-size: $font-size-md;
+}
+
+.card-bar {
+  border-top: 4px solid;
+  border-image-source: linear-gradient(90deg, $primary, #8ed6fb 50%, #d32e9d);
+  border-image-slice: 1;
+}
+
+.modal-backdrop {
+  background-color: #fff;
+}
+
+.modal-backdrop.show {
+  opacity: 0.7;
+}
+
+@include media-breakpoint-up(md) {
+  .modal-backdrop.show {
+    opacity: 0;
+  }
 }
