Revert "Add Website corrections"

--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -155,7 +155,7 @@ $alert-padding-y:                   $spacer;
 $alert-padding-x:                   $spacer * 1.5;
 $alert-margin-bottom:               0;
 $alert-border-radius:               0;
-$alert-link-font-weight:            400;
+$alert-link-font-weight:            $headings-font-weight;
 $alert-border-width:                0;
 
 $alert-bg-scale:                    0;
