--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
     <div class="row justify-content-center text-center">
       <div class="col-lg-5">
         <h2 class="h4">Security </h2>
-        <p>Security is what Coraza is for, enforce policies using <a href="#">OWASP CRS</a> or create your own policies to stop attackers and generate important audit information.</p>
+        <p>Security is what Coraza is for, enforce policies using <a href="/docs/tutorials/coreruleset">OWASP CRS</a> or create your own policies to stop attackers and generate important audit information.</p>
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Fast by default ⚡️</h2>
