added the missing card color so now text is readable on the posts cards

--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -146,6 +146,8 @@ $navbar-light-active-color:         $primary;
 // Cards
 
 $card-border-color:                 $gray-200;
+$card-color:                        $gray-100;
+
 
 // Alerts
 //
